fix: add lazysizes extension to detect changes in data-src, and fix spacing in blog headers

--- a/src/components/PostDetail/style.scss
+++ b/src/components/PostDetail/style.scss
@@ -1,4 +1,8 @@
 #post-content {
+  h1 {
+    line-height: 1.25;
+    margin-top: 1em;
+  }
   td {
     padding: 0.25rem;
   }
